--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=4000
+PORT=8000
 DB_HOST=localhost
-DB_USERNAME=root
+DB_USERNAME=postgres
+DB_NAME=postgres
 DB_PASSWORD=123456
-DB_NAME=express_mysql
